# learnbee_mcp

./: .gitattributes  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
lessons/: animals.txt  dinosaurs.txt  example_colors.txt  how_to_multiply.txt  numbers_1_to_10.txt  shapes.txt  weather_and_seasons.txt
modal/: invoke.py  main.py
src/learnbee/: constants.py  llm_call.py  mcp_client.py  mcp_server.py  prompts.py  theme.py  tutor_handlers.py  ui.py
