[project]
name = "learnbee-mcp"
version = "0.1.0"
description = "Educational MCP for early childhood education (ages 3-6)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio[mcp]>=5.33.0",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.46.0",
    "sentencepiece>=0.2.0",
    "torch>=2.8.0",
    "transformers>=4.52.4",
    "vllm>=0.9.0.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
